--- a/priv/www/partials/subscribes.html
+++ b/priv/www/partials/subscribes.html
@@ -1,12 +1,17 @@
 <h3>Subscribes</h3>
-<table>
+<table class="table">
   <tbody>
-    <tr ng-repeat="topic in topics">
+    <tr ng-repeat="sub in subscribes.subscribes">
       <th>Topic</th>
-      <td><input type="text" value="{{ topic }}"></td>
+      <td><input type="text" ng-model="sub.topic"
+		 required
+		 ng-trim="true"></td>
 
       <th>QoS</th>
-      <td><input type="text" value="{{ get_qos($index) }}"></td>
+      <td><select ng-model="sub.qos" 
+		  ng-options="qos for qos in qosList"
+                  style="width:50px;">
+      </td>
     </tr>
     
   </tbody>
@@ -15,5 +20,8 @@
 <button class="btn btn-primary" type="button"
 	ng-click="addSubscriber()">add</button>
 
+<button class="btn btn-danger" type="button" ng-click="save()">
+  save
+</button>
+
 <hr>
-<button class="btn btn-danger" type="button">save</button>
