--- a/priv/www/partials/base.html
+++ b/priv/www/partials/base.html
@@ -3,11 +3,11 @@
   <tbody>
     <tr>
       <th>Device ID</th>
-      <td><input type="text" value="" ng-model="deviceId"></td>
+      <td><input type="text" value="" ng-model="base.device_id"></td>
     </tr>
     <tr>
       <th>Group ID</th>
-      <td><input type="text" value="" ng-model="groupId"></td>
+      <td><input type="text" value="" ng-model="base.group_id"></td>
     </tr>
 
   </tbody>
