save success color and nessesarry color to save button

--- a/priv/www/partials/arduino.html
+++ b/priv/www/partials/arduino.html
@@ -90,8 +90,7 @@
   </tbody>
 </table>
 
-<button class="btn btn-danger" type="button" ng-click="save()">
-  save
-</button>
-
+<button class="btn" type="button"
+	ng-click="save()"
+	ng-class="{'btn-danger':changed, 'btn-success':!changed}">save</button>
 <hr>
