--- a/priv/www/partials/gpio.html
+++ b/priv/www/partials/gpio.html
@@ -40,9 +40,7 @@
   </tbody>
 </table>
 
-<button class="btn btn-danger" type="button"
-	ng-click="save()">
-  save
-</button>
-
+<button class="btn" type="button"
+	ng-click="save()"
+	ng-class="{'btn-danger':changed, 'btn-success':!changed}">save</button>
 <hr>
