--- a/priv/www/partials/mqtt_broker.html
+++ b/priv/www/partials/mqtt_broker.html
@@ -13,6 +13,14 @@
       <th>Port</th>
       <td><input type="text" value="" ng-model="mqtt.port"></td>
     </tr>
+    <tr>
+      <th>Username</th>
+      <td><input type="text" value="" ng-model="mqtt.username"></td>
+    </tr>
+    <tr>
+      <th>Password</th>
+      <td><input type="text" value="" ng-model="mqtt.password"></td>
+    </tr>
     
   </tbody>
 </table>
