mqtt enable/disable

--- a/priv/www/partials/mqtt_broker.html
+++ b/priv/www/partials/mqtt_broker.html
@@ -1,4 +1,11 @@
 <h3>MQTT Connection</h3>
+
+<input type="checkbox"  ng-model="mqtt.mqtt_enable" id="mqtt-enable">
+<label for="mqtt-enable" style="display:inline;">
+  Enable MQTT
+</label><br><br>
+
+
 <table>
   <tbody>
     <tr>
